--- a/index.html
+++ b/index.html
@@ -22,13 +22,22 @@
 <header class="header">
   <div class="container nav">
     <div class="logo">Méndez & Asociados</div>
-    <nav aria-label="Navegación principal">
+
+    <!-- Botón hamburguesa -->
+    <button class="menu-toggle" aria-label="Abrir menú">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+    <nav class="nav-menu" aria-label="Navegación principal">
       <a href="#areas">Áreas</a>
       <a href="#estudio">El estudio</a>
       <a href="#contacto" class="btn btn-outline">Consulta</a>
     </nav>
   </div>
 </header>
+
 
 <!-- HERO -->
 <section class="hero">
