--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 <!-- HEADER -->
 <header class="header">
   <div class="container nav">
-    <div class="logo">Méndez & Asociados</div>
+    <div class="brand">
+  <img src="assets/logo.png" alt="Logo Méndez & Asociados" class="brand-logo">
+  <span class="brand-name">Méndez & Asociados</span>
+</div>
+
 
     <!-- Botón hamburguesa -->
     <button class="menu-toggle" aria-label="Abrir menú">
@@ -33,6 +37,7 @@
     <nav class="nav-menu" aria-label="Navegación principal">
       <a href="#areas">Áreas</a>
       <a href="#estudio">El estudio</a>
+      <a href="#novedades">Novedades</a>
       <a href="#contacto" class="btn btn-outline">Consulta</a>
     </nav>
   </div>
@@ -86,15 +91,41 @@
   <div class="container grid grid-2">
     <div class="reveal">
       <h2>El estudio</h2>
-      <p>
-        Somos un estudio con amplia experiencia, enfocado en ofrecer
-        soluciones legales eficientes y un trato cercano.
-      </p>
-      <p>
-        Nuestra prioridad es brindar claridad, compromiso y resultados
-        concretos en cada caso.
-      </p>
+
+      <!-- DESKTOP -->
+      <div class="estudio-desktop">
+        <p>
+          Méndez & Asociados es un estudio jurídico dedicado al ejercicio profesional
+          del derecho, con una trayectoria enfocada en la defensa y el asesoramiento
+          integral de sus clientes.
+        </p>
+        <p>
+          Brindamos atención personalizada, analizando cada situación en particular
+          para ofrecer soluciones legales claras, responsables y ajustadas a la
+          normativa vigente.
+        </p>
+        <p>
+          Nuestro compromiso es acompañar a quienes confían en nosotros con seriedad,
+          ética profesional y una comunicación transparente, orientada a obtener
+          resultados sólidos y sostenibles.
+        </p>
+      </div>
+
+      <!-- MOBILE -->
+      <div class="estudio-mobile">
+        <p>
+          Méndez & Asociados es un estudio jurídico enfocado en la defensa y el
+          asesoramiento integral de sus clientes.
+        </p>
+        <p>
+          Trabajamos con atención personalizada, compromiso profesional y
+          comunicación clara, brindando soluciones legales responsables y efectivas.
+        </p>
+      </div>
+
     </div>
+
+
 
     <div class="image-box reveal">
       <img
@@ -129,6 +160,49 @@
     </div>
   </div>
 </section>
+
+<!-- NOVEDADES -->
+<section id="novedades" class="section bg-light reveal">
+  <div class="container">
+    <h2 class="section-title">Novedades y actualidad legal</h2>
+    <p class="section-subtitle">
+      Información clara y actual sobre derechos laborales, jubilaciones y cambios normativos.
+    </p>
+
+    <div class="grid grid-3 novedades-grid">
+      <article class="card novedad reveal">
+        <h3>¿Qué cambia con la nueva normativa laboral?</h3>
+        <p>
+          Repasamos los principales puntos que impactan en trabajadores y empleadores,
+          y qué derechos siguen vigentes.
+        </p>
+        <a href="articulos/cambios-normativa-laboral-argentina.html" class="leer-mas">
+  Leer más
+</a>
+
+      </article>
+
+      <article class="card novedad reveal">
+        <h3>Claves actuales sobre jubilación y pensiones</h3>
+        <p>
+          Requisitos, actualizaciones y recomendaciones para quienes están
+          próximos a iniciar su trámite jubilatorio.
+        </p>
+        <a href="articulos/jubilacion-y-pensiones-claves.html" class="leer-mas">Leer más</a>
+      </article>
+
+      <article class="card novedad reveal">
+        <h3>Despido sin causa: derechos básicos</h3>
+        <p>
+          Qué corresponde cobrar, plazos importantes y cuándo conviene
+          consultar con un abogado.
+        </p>
+        <a href="articulos/despido-sin-causa-derechos.html" class="leer-mas">Consultar</a>
+      </article>
+    </div>
+  </div>
+</section>
+
 
 <!-- CTA FINAL -->
 <section class="cta-final reveal">
