--- a/articulos/despido-sin-causa-derechos.html
+++ b/articulos/despido-sin-causa-derechos.html
@@ -15,10 +15,21 @@
 
 <header class="header">
   <div class="container nav">
-    <div class="logo">Méndez & Asociados</div>
-    <nav class="nav-menu">
-      <a href="../index.html">Inicio</a>
+    <div class="brand">
+      <img src="../assets/logo.png" alt="Logo Méndez & Asociados" class="brand-logo">
+      <span class="brand-name">Méndez & Asociados</span>
+    </div>
+
+    <button class="menu-toggle" aria-label="Abrir menú">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+    <nav class="nav-menu" aria-label="Navegación principal">
       <a href="../index.html#areas">Áreas</a>
+      <a href="../index.html#estudio">El estudio</a>
+      <a href="../index.html#novedades">Novedades</a>
       <a href="../index.html#contacto" class="btn btn-outline">Consulta</a>
     </nav>
   </div>
@@ -71,6 +82,6 @@
     <small>© Méndez & Asociados – Estudio Jurídico</small>
   </div>
 </footer>
-
+<script src="../js/main.js" defer></script>
 </body>
 </html>
